# backend/services/operator-market-service/src/main/java/com/dataengine/operator/domain/modal/OperatorEntity.java
@@ -1,0 +1,44 @@
+package com.dataengine.operator.domain.modal;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.Getter;
+import lombok.Setter;
+
+import java.time.LocalDateTime;
+
+@Entity
+@Getter
+@Setter
+@Table(name = "operator")
+public class OperatorEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable = false)
+    private String name;
+
+    @Column(length = 1024)
+    private String description;
+
+    @Column
+    private String category;
+
+    @Column
+    private String version;
+
+    @Column
+    private String author;
+
+    @Column
+    private LocalDateTime createdAt;
+
+    @Column
+    private LocalDateTime updatedAt;
+}
+
